5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1723_2496.log
== TEST (2019-05-09 10:11:16) 
-- CODE:
num = int(input("Numero :"))

z == 0
while(num != -1):
	z == num + z
	print(z)
	num = int(input("Numero :"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z == 0
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:12:10) 
-- CODE:
num = int(input("Numero :"))

z = 0
while(num != -1):
	z == num + z
	print(z)
	num = int(input("Numero :"))
-- OUTPUT:
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:12:34) 
-- CODE:
num = int(input("Numero :"))

z = 0
while(num != -1):
	z == num + z
	print(num + z)
	num = int(input("Numero :"))
-- OUTPUT:
-525
1075
333
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:13:23) 
-- CODE:
num = int(input("Numero :"))

z = 0
while(num != -1):
	print(num + z)
	z = num + z
	num = int(input("Numero :"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:13:40) 
-- CODE:
num = int(input("Numero :"))

z = 0
while(num != -1):
	print(num + z)
	z = num + z
	num = int(input("Numero :"))
-- EXECUTION TIME:
0.179357
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:14:23) 
-- CODE:
num = int(input("Numero :"))

z = 0
while(num != -1):
	z = num + z
	num = int(input("Numero :"))
else:
	print(num + z)
-- OUTPUT:
873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:14:42) 
-- CODE:
num = int(input("Numero :"))

z = 0
while(num != -1):
	z = num + z
	num = int(input("Numero :"))
else:
	print(z)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:14:52) 
-- CODE:
num = int(input("Numero :"))

z = 0
while(num != -1):
	z = num + z
	num = int(input("Numero :"))
else:
	print(z)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:14:58) 
-- CODE:
num = int(input("Numero :"))

z = 0
while(num != -1):
	z = num + z
	num = int(input("Numero :"))
else:
	print(z)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:15:05) 
-- CODE:
num = int(input("Numero :"))

z = 0
while(num != -1):
	z = num + z
	num = int(input("Numero :"))
else:
	print(z)
-- EXECUTION TIME:
0.170474
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
